# omodaPilot

./: .gitignore  az_run.sh  frames_2025-11-01_14.23.18.gv  frames_2025-12-04_20.26.50.gv  freeze_system.sh  run.sh  serial_make.sh  unfreeze_system.sh  wd_lan_lidar.sh  wd_lan_saya.sh
doc/titi(p)/: odom.yaml
src/hardware/: CMakeLists.txt  package.xml
src/master/: CMakeLists.txt  package.xml
src/realsense2_camera/: CHANGELOG.rst  (+2 more)
src/world_model/: CMakeLists.txt  package.xml
src/world_model/include/world_model/: fast_normals_nanoflann.hpp
src/world_model/scripts/: gps_logger.py  waypoint_router.py
src/world_model/src/: all_obstacle_filter.cpp  pose_estimator.cpp
src/world_model/waypoints/destinations/: elektro_robotik.csv  rc_robotik.csv
src/world_model/waypoints/segments/: segment10_json_seg1.csv  segment11_json_seg1.csv  segment12_json_seg1.csv  segment13_json_seg1.csv  segment14_json_seg1.csv  segment15_json_seg1.csv  segment16_json_seg1.csv  segment17_json_seg1.csv  segment18_json_seg1.csv  segment19_json_seg1.csv  segment1_json_seg1.csv  segment20_json_seg1.csv  segment21_json_seg1.csv  segment22_json_seg1.csv  segment23_json_seg1.csv  segment24_json_seg1.csv  segment25_json_seg1.csv  segment26_json_seg1.csv  segment27_json_seg1.csv  segment28_json_seg1.csv  segment29_json_seg1.csv  segment2_json_seg1.csv  segment30_json_seg1.csv  segment31_json_seg1.csv  segment32_json_seg1.csv  segment33_json_seg1.csv  segment34_json_seg1.csv  segment35_json_seg1.csv  segment36_json_seg1.csv  segment37_json_seg1.csv  segment38_json_seg1.csv  segment39_json_seg1.csv  segment3_json_seg1.csv  segment40_json_seg1.csv  segment41_json_seg1.csv  segment42_json_seg1.csv  segment4_json_seg1.csv  segment5_json_seg1.csv  segment6_json_seg1.csv  segment7_json_seg1.csv  (+2 more)
src/world_model/waypoints/test/: gps_log.csv  gps_log2.csv
testing/: a.out  chery_canfd.h  sesuatu  sesuatu.cpp
(+121 files in other folders)
